compiler/testData/diagnostics/testsWithStdLib/experimental/withParameter_before.kt
// FIR_IDENTICAL
// !LANGUAGE: -ForbidOptInMarkersWithParameters

@RequiresOptIn
annotation class <!OPT_IN_MARKER_WITH_PARAMETERS_WARNING!>WithParameter<!>(val value: String)
